# vbam-cma

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
docs/decisions/: 0001-use-rust-as-implementation-language.md  0002-use-sqlx-for-persistent-storage.md  README.md  adr-template.md
src/: campaign.rs  main.rs
src/campaign/: data.rs  empire.rs  system.rs  unit.rs
