[package]
name = "vbam-cma"
version = "0.1.0"
edition = "2021"
description = "Victory By Any Means Campaign Moderator's Assistant"
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.3", features = ["fltk-bundled"] }
